Rework publication list

--- a/publications/index.html
+++ b/publications/index.html
@@ -22,9 +22,11 @@ permalink: /publications/
 
 	{% assign sorted_workshops = (site.data.publications | sort: 'year') %}
 
-	{% include publication-list.html publications=sorted_workshops type="workshop" headline="Workshop proceedings" %}
+	{% include publication-list.html publications=sorted_workshops type="demo" headline="System Demonstration Paper" %}
 
-	{% include publication-list.html publications=sorted_workshops type="poster" headline="Poster proceedings" %}
+	{% include publication-list.html publications=sorted_workshops type="workshop" headline="Workshop Proceedings" %}
 
-  {% include publication-list.html publications=sorted_workshops type="book" headline="Other contributions" %}
+	{% include publication-list.html publications=sorted_workshops type="poster" headline="Poster Proceedings" %}
+
+  {% include publication-list.html publications=sorted_workshops type="book" headline="Other Contributions" %}
 </div> <!-- .publications -->
