Rework index page

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ description: Impressum
 <div class="about">
     <h2>Contact</h2>
     Feedback to:
-    <p><span class="fa fa-envelope"></span><b> contact[at]uli-fahrer.de</b></p>
+    <p><span class="fa fa-envelope"></span><b> contact(at)uli-fahrer(dot)de</b></p>
 
 
     <h2>Address</h2>
@@ -17,7 +17,7 @@ description: Impressum
         Pruthstraße 22<br>
         Germany
     </address>
-    
+
     <h2>Disclaimer</h2>
 
     <strong>Limitation of liability for internal content</strong></p>
@@ -31,5 +31,5 @@ description: Impressum
     <p>A visit to our website can result in the storage on our server of information about the access (date, time, page accessed). This does not represent any analysis of personal data (e.g., name, address or e-mail address). If personal data are collected, this only occurs – to the extent possible – with the prior consent of the user of the website. Any forwarding of the data to third parties without the express consent of the user shall not take place.</p>
     <p>We would like to expressly point out that the transmission of data via the Internet (e.g., by e-mail) can offer security vulnerabilities. It is therefore impossible to safeguard the data completely against access by third parties. We cannot assume any liability for damages arising as a result of such security vulnerabilities.</p>
     <p>The use by third parties of all published contact details for the purpose of advertising is expressly excluded. We reserve the right to take legal steps in the case of the unsolicited sending of advertising information; e.g., by means of spam mail.</p>
-    
+
 </div>
