--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Main page with a short description about the page
 ---
 
 <div class="row">
-	
+
 	<div class="col-md-4 col-xs-4 text-center">
 		<img class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
@@ -16,24 +16,23 @@ description: Main page with a short description about the page
 	</div>
 
 	<div class="col-md-8 col-xs-12">
-		<p class="dropcap">My name is Uli Fahrer, and I'm a Computer Science student at the
-		<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt.</a>
-			I'm a software developer, technology enthusiast and interested in Natural Language Processing
-			and Web Mining.</p>
+		<p class="dropcap">My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in NLP
+		research and Software Engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
+		</p>
 	</div>
 
     <div class="col-md-12 col-xs-12">
-		<p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
-        <a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
-        project if you're interested. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
-        <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.</p>
-	</div>
-	
-	<div class="col-md-6 col-xs-4">
-		<a class="btn  btn-lg btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+		<p> This site serves as portfolio for my various projects and publications. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
+        <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
+				Grab my <a target="_blank" href="../files/cv/cv-uli-fahrer-password-is-123.pdf.zip">Resume</a> (pw: 123).
+		</p>
 	</div>
 
-	<div class="col-md-6 col-xs-8">
+	<!--<div class="col-md-6 col-xs-4">
+		<a class="btn  btn-lg btn-primary" type="button" target="_blank" href="../files/cv/cv-password-is-123.pdf.zip">Grab my Resume (pw: 123)</a>
+	</div> -->
+
+	<div class="col-md-12 col-xs-12">
 		<ul class="pull-right social-icons">
 		    <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
 		    <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
