remove twitter reference

--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@ description: Main page with a short description about the page
 		</p>
 	</div>
 
-    <div class="col-md-12 col-xs-12">
-		<p> This site serves as portfolio for my various projects and publications. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
-        <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
+  <div class="col-md-12 col-xs-12">
+		<p> This site serves as portfolio for my various projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
 		</p>
 	</div>
 
 	<div class="col-md-12 col-xs-12">
 		<ul class="pull-right social-icons">
 		    <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
-		    <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
 		    <li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
 		    <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
 		</ul>
