rephrase index description listed in Google

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: Main page with a short description about the page
+description: Personal website showcasing my projects and academic pursuit to the world
 ---
 
 <div class="row">
