--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@ description: Personal website showcasing my projects and academic pursuit to the
 
 	<div class="col-md-8 col-xs-12">
 		<p class="dropcap">My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in NLP
-		research and Software Engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
+		research and software engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
 		</p>
 	</div>
 
-  <div class="col-md-12 col-xs-12">
-		<p> This site serves as portfolio for my various projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
+	<div class="col-md-12 col-xs-12">
+		<p> This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
 		</p>
 	</div>
 
 	<div class="col-md-12 col-xs-12">
 		<ul class="pull-right social-icons">
-		    <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
-		    <li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
-		    <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
+			<li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
+			<li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
+			<li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
 		</ul>
 	</div>
 </div>
