--- a/publications/index.html
+++ b/publications/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Publications
 publications: active
-description: Current puplications
+description: publications site
 permalink: /publications/
 ---
 <div class="publications">
@@ -26,5 +26,5 @@ permalink: /publications/
 
 	{% include publication-list.html publications=sorted_workshops type="workshop" headline="Workshop Proceedings" %}
 
-  {% include publication-list.html publications=sorted_workshops type="book" headline="Other Contributions" %}
+	{% include publication-list.html publications=sorted_workshops type="book" headline="Other Contributions" %}
 </div> <!-- .publications -->
