--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@ description: Personal website showcasing my projects and academic pursuit to the
 	</div>
 
 	<div class="col-md-12 col-xs-12">
-		<p> This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.
+		<p> This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
 		</p>
 	</div>
 
 	<div class="col-md-12 col-xs-12">
 		<ul class="pull-right social-icons">
 			<li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
-			<li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
+			<li><a href="https://de.linkedin.com/in/ulifahrer" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
 		</ul>
 	</div>
 </div>
