feat: update front page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ description: Personal website showcasing my projects and academic pursuit to the
 	</div>
 
 	<div class="col-md-8 col-xs-12">
-		<p class="dropcap">My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in NLP
-		research and software engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
+		<p class="dropcap">My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in cyber security
+		and software engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
 		</p>
 	</div>
 
