feat: update project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -19,8 +19,8 @@ permalink: /projects/
                             <p> {{ project.description }}
 
                             <ul class="list-unstyled">
-                                <li>Project Duration: {{ project.duration }}</li>
-                                <li>Project Page: {{ project.page }}</li>
+                                <li>Project duration: {{ project.duration }}</li>
+                                <li>Project page: {{ project.page }}</li>
                             </ul>
                         </li>
                     {% endif %}
@@ -40,8 +40,8 @@ permalink: /projects/
                             <p> {{ project.description }}
 
                             <ul class="list-unstyled">
-                                <li>Project Duration: {{ project.duration }}</li>
-                                <li>Project Page: {{ project.page }}</li>
+                                <li>Project duration: {{ project.duration }}</li>
+                                <li>Project page: {{ project.page }}</li>
                             </ul>
                         </li>
                     {% endif %}
