--- a/publications/index.html
+++ b/publications/index.html
@@ -5,16 +5,17 @@ publications: active
 description: publications site
 permalink: /publications/
 ---
+
 <div class="publications">
 
-	<div class="alert alert-info" role="alert">
-		<div class="row vertical-align">
-			<div class="col-md-1 col-xs-1">
-				<img src="https://scholar.google.com/citations/images/avatar_scholar_150.jpg" class="img-responsive avatar" >
+	<div class="alert bg-light" role="alert">
+		<div class="row col-md-12">
+			<div class="col-md-1 col-sm-2 col-2">
+				<img src="https://scholar.google.com/citations/images/avatar_scholar_150.jpg" class="img-fluid img-thumbnail" >
 			</div>
-			<div class="col-md-4 col-xs-4">
+			<div class="col-md-4 col-sm-8 col-10">
 				<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=hZMWg78AAAAJ" class="alert-link" target="_blank">
-					Google Scholar Profile
+					<p>Google Scholar Profile</p>
 				</a>
 			</div>
 		</div>
