--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@ title: Home
 description: Personal website showcasing my projects and academic pursuit to the world
 ---
 
-<div class="row">
+<div class="row mb-5">
+	<div class="col-md-12 col-12">
 
-	<div class="col-md-4 col-xs-4 text-center">
-		<img class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
-	</div>
+		<img class="me-5 float-start rounded-circle" alt="Uli Fahrer" src="img/uli.jpg">
 
-	<div class="col-md-8 col-xs-8">
 		<h1>Hello,</h1>
-		<h4 class="about-quote">question = ( to ) ? be : ! be; - William Shakespeare</h4>
-	</div>
+		<h3 class="fst-italic">question = ( to ) ? be : ! be; - William Shakespeare</h3>
 
-	<div class="col-md-8 col-xs-12">
-		<p class="dropcap">My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in cyber security
-		and software engineering. I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
+		<p class="dropcap">
+			My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in cyber security and software engineering. 
+			I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
 		</p>
 	</div>
+</div>
 
-	<div class="col-md-12 col-xs-12">
-		<p> This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
-		</p>
-	</div>
+<div class="row">
+	<p> 
+		This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
+	</p>
+</div>
 
-	<div class="col-md-12 col-xs-12">
+<div class="row">
+	<div class="col-md-12 col-12">
 		<ul class="pull-right social-icons">
 			<li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
 			<li><a href="https://de.linkedin.com/in/ulifahrer" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
 		</ul>
 	</div>
 </div>
+
+
