fix: migrate text align to Bootstrap 5

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ description: Personal website showcasing my projects and academic pursuit to the
 
 <div class="row">
 	<div class="col-md-12 col-12">
-		<ul class="pull-right social-icons">
+		<ul class="social-icons text-end">
 			<li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
 			<li><a href="https://de.linkedin.com/in/ulifahrer" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
 		</ul>
