feat: restyle 404 page

--- a/404.html
+++ b/404.html
@@ -3,7 +3,12 @@ layout: default
 title: 404 Error | Sorry, this page does not exist.
 --- 
 
-<div class="error">
-	<h1>Whoah, that's a 404 Error</h1>
-	<p class="lead">Hey, sorry, but the page you're trying to access doesn't exist. Try <a href="/" title="Uli Fahrer homepage">going back to the homepage</a>, or use the navigation menu above to find what you're looking for.</p>
+<div class="alert alert-warning" role="alert">
+	<h1 class="alert-heading">
+		<i class="fas fa-exclamation-triangle"></i>
+		Whoah, that's a 404 Error!
+	</h1>
+	<p>
+		Hey, sorry, but the page you're trying to access doesn't exist. Try <a href="/" class="alert-link" title="Uli Fahrer homepage">going back to the homepage</a>, or use the navigation menu above to find what you're looking for.
+	</p>
 </div>
