feat: make changes for small screens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: Personal website showcasing my projects and academic pursuit to the
 <div class="row mb-5">
 	<div class="col-md-12 col-12">
 
-		<img class="me-5 float-start rounded-circle" alt="Uli Fahrer" src="img/uli.jpg">
+		<img class="me-5 float-start img-fluid rounded-circle" alt="Uli Fahrer" src="img/uli.jpg">
 
 		<h1>Hello,</h1>
 		<h3 class="fst-italic">question = ( to ) ? be : ! be; - William Shakespeare</h3>
