feat(publication): improve Scholar profile banner

--- a/publications/index.html
+++ b/publications/index.html
@@ -8,15 +8,20 @@ permalink: /publications/
 
 <div class="publications">
 
-	<div class="alert bg-light" role="alert">
-		<div class="row col-md-12">
-			<div class="col-md-1 col-sm-2 col-2">
-				<img src="https://scholar.google.com/citations/images/avatar_scholar_150.jpg" class="img-fluid img-thumbnail" >
-			</div>
-			<div class="col-md-4 col-sm-8 col-10">
-				<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=hZMWg78AAAAJ" class="alert-link" target="_blank">
-					<p>Google Scholar Profile</p>
-				</a>
+	<div class="card mb-4 border-0 shadow-sm">
+		<div class="card-body">
+			<div class="row align-items-center g-3">
+				<div class="col-auto">
+					<img src="https://scholar.google.com/citations/images/avatar_scholar_150.jpg" class="rounded" width="60" height="60" alt="Google Scholar">
+				</div>
+				<div class="col d-flex flex-column justify-content-center">
+					<h5 class="mb-1">
+						<a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=hZMWg78AAAAJ" class="text-decoration-none" target="_blank">
+							Google Scholar Profile
+						</a>
+					</h5>
+					<p class="text-muted mb-0 small">View all publications and citations</p>
+				</div>
 			</div>
 		</div>
 	</div>
