feat(about): more stego

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ permalink: /about/
 
 <div class="about">
     <h2>Legal Notice</h2>
-    <p><span class="fa fa-envelope"></span><b> contact(at)uli-fahrer(dot)de</b></p>
+    <p><span class="fa fa-envelope"></span><b> contact&#8203;(at)&#8203;uli-fahrer&#8203;(dot)&#8203;de</b></p>
 
     <p><strong>Limitation of liability for internal content</strong></p>
     <p>The content of our website has been compiled with meticulous care and to the best of our knowledge. However, we cannot assume any liability for the up-to-dateness, completeness or accuracy of any of the pages.</p>
