--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,17 @@ title: Projects
 description: Project site
 permalink: /projects/
 ---
+<div class="row">
+  <div class="col-md-12">
+    <h1>Projects</h1>
+    <div class="d-flex flex-column flex-lg-row justify-content-lg-between">
+      <span class="text-muted">Some projects I worked on can be found here, for more you should check out my GitHub.</span>
+      <a href="https://github.com/Tooa" target="_blank" class="text-muted text-decoration-none text-nowrap"><i class="fab fa-github me-1"></i> GitHub</a>
+    </div>
+    <hr class="mt-4 mb-3"/>
+  </div>
+</div>
+
 <div class="projects">
     <div class="row">
         <div class="col-md-12">
