feat(publication): rework section

--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@ permalink: /projects/
   <div class="col-md-12">
     <h1>Projects</h1>
     <div class="d-flex flex-column flex-lg-row justify-content-lg-between">
-      <span class="text-muted">Some projects I worked on can be found here, for more you should check out my GitHub.</span>
+      <span class="text-muted">Some projects I worked on can be found here, for more you should check out my GitHub</span>
       <a href="https://github.com/Tooa" target="_blank" class="text-muted text-decoration-none text-nowrap"><i class="fab fa-github me-1"></i> GitHub</a>
     </div>
     <hr class="mt-4 mb-3"/>
