--- a/publications/index.html
+++ b/publications/index.html
@@ -8,7 +8,7 @@ permalink: /publications/
   <div class="col-md-12">
     <h1>Publications</h1>
     <div class="d-flex flex-column flex-lg-row justify-content-lg-between">
-      <span class="text-muted">Selected publications and academic contributions. View all publications and citations on my Google Scholar profile.</span>
+      <span class="text-muted">Selected publications and academic contributions. View all publications and citations on my Google Scholar profile</span>
       <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=hZMWg78AAAAJ" target="_blank" class="text-muted text-decoration-none text-nowrap">
         <i class="fas fa-graduation-cap me-1"></i> Google Scholar
       </a>
