docs: update home text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: Personal website showcasing my projects and academic pursuit to the world
+description: Personal website for my projects and publications
 ---
 
 <div class="row mb-5">
@@ -13,15 +13,15 @@ description: Personal website showcasing my projects and academic pursuit to the
 		<h3 class="fst-italic">question = ( to ) ? be : ! be; - William Shakespeare</h3>
 
 		<p class="dropcap">
-			My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in cyber security and software engineering. 
+			My name is Uli Fahrer. I'm a software developer, technology enthusiast and interested in cyber security and software engineering.
 			I received my master's degree in computer science from the <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technische Universität Darmstadt</a>.
 		</p>
 	</div>
 </div>
 
 <div class="row">
-	<p> 
-		This site serves as portfolio for my projects and publications. You can also find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
+	<p>
+		This is my portfolio of projects and publications. I also write short-form content on my <a href="/blog/">blog</a> about interesting problems I encounter and solve. Find me on <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://de.linkedin.com/in/ulifahrer" target="_blank ">LinkedIn</a>.
 	</p>
 </div>
 
@@ -33,5 +33,3 @@ description: Personal website showcasing my projects and academic pursuit to the
 		</ul>
 	</div>
 </div>
-
-
